// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Big Card matches snapshot 1`] = `
.c0 {
  display: block;
  background-color: white;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  height: auto;
  justify-content: flex-start;
  justify-content: stretch;
  text-decoration: none;
  overflow: hidden;
  transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  position: relative;
  border: 1px solid #e8e8e8;
  border-radius: 4px;
  width: 100%;
  padding: 24px;
  color: #2a2a2a;
  margin-bottom: 16px;
}

@media screen and (min-width: 30rem) {
  .c0 {
    padding: 48px;
  }
}

@media screen and (min-width: 30rem) {

}

@media screen and (min-width: 30rem) {

}

<div
  class="c0"
  color="text.primary"
  mb="3"
  width="1"
>
  Big card
</div>
`;

exports[`Dashed Card matches snapshot 1`] = `
.c0 {
  display: block;
  background-color: white;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  height: auto;
  justify-content: flex-start;
  justify-content: stretch;
  text-decoration: none;
  overflow: hidden;
  transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  position: relative;
  border: 2px dashed #e8e8e8;
  border-radius: 4px;
  width: 100%;
  padding: 16px;
  color: #2a2a2a;
  margin-bottom: 16px;
}

@media screen and (min-width: 30rem) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width: 30rem) {

}

<div
  class="c0"
  color="text.primary"
  mb="3"
  width="1"
>
  Dashed card
</div>
`;

exports[`Default Card matches snapshot 1`] = `
.c0 {
  display: block;
  background-color: white;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  height: auto;
  justify-content: flex-start;
  justify-content: stretch;
  text-decoration: none;
  overflow: hidden;
  transition: box-shadow 0.15s ease-out,transform 0.15s ease-out;
  position: relative;
  border: 1px solid #e8e8e8;
  border-radius: 4px;
  width: 100%;
  padding: 16px;
  color: #2a2a2a;
  margin-bottom: 16px;
}

@media screen and (min-width: 30rem) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width: 30rem) {

}

<div
  class="c0"
  color="text.primary"
  mb="3"
  width="1"
>
  Default Card
</div>
`;
